--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.4"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.scripts]
+latexconouaille = 'latexconouaille.cli:main'
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
